[gd_scene load_steps=10 format=3 uid="uid://dd5vtehtgotu3"]

[ext_resource type="Script" path="res://cockpit.gd" id="1_8gwkl"]
[ext_resource type="PackedScene" uid="uid://cb2246x36aoan" path="res://HelmetFire Blender/Cockpit.blend" id="1_lr5ip"]
[ext_resource type="PackedScene" uid="uid://pc5j8xmd0b2a" path="res://player.tscn" id="2_jgdid"]
[ext_resource type="PackedScene" uid="uid://c7vqskmex3fhn" path="res://analogheadingindicator.tscn" id="4_1mc3l"]
[ext_resource type="PackedScene" uid="uid://do61jg2rfu4g8" path="res://heading_indicator.tscn" id="4_ccodl"]
[ext_resource type="PackedScene" uid="uid://bjhygf4352hxl" path="res://bullseyetextindicator.tscn" id="6_nyrhv"]
[ext_resource type="PackedScene" uid="uid://cvwfm2sdq6tgh" path="res://minimap.tscn" id="7_41bxc"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vjdl1"]
albedo_color = Color(0, 1, 0.166667, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_7x4at"]
material = SubResource("StandardMaterial3D_vjdl1")
top_radius = 4.0
bottom_radius = 4.0
height = 1.0

[node name="Cockpit" type="StaticBody3D"]
script = ExtResource("1_8gwkl")

[node name="Cockpit" parent="." instance=ExtResource("1_lr5ip")]

[node name="Player" parent="." instance=ExtResource("2_jgdid")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.208231, -0.485784)

[node name="AnalogHeadingIndicator" parent="." instance=ExtResource("4_1mc3l")]
transform = Transform3D(1, 0, 0, 0, 0.155486, -0.987838, 0, 0.987838, 0.155486, 0, -0.189622, -1.35548)

[node name="NumericalHeadingIndicator" parent="." instance=ExtResource("4_ccodl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0347837, -1.33)

[node name="BullseyeTextIndicator" parent="." instance=ExtResource("6_nyrhv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0260306, -1.33)

[node name="Timer" type="Timer" parent="."]

[node name="Minimap" parent="." instance=ExtResource("7_41bxc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.274413, -0.180926, -1.3222)

[node name="cockpitminimapmesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.717, -0.409503)
layers = 16
mesh = SubResource("CylinderMesh_7x4at")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
